[package]
name = "crosschainvestingvault"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"
tokio = "1.28.2"
ink = "5"
scale = "0.1"
scale-info = "2"
# Optional, but helpful for XCM integration and messaging
hex = "0.4"
drink = "0.18.0"
