[workspace]
members = [
    "shuttle-backend",
    "vesting_vault",
]
resolver = "2"

[workspace.dependencies]
ink = "5"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
axum = "0.8"
tokio = "1.28.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
drink = "0.18.0"