[package]
name = "shuttle-backend"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
axum = "0.8.1"
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
subxt = "0.42.1"
subxt-signer = "0.42.1"
ink_primitives = "5.1.0"
parity-scale-codec = "3.0"
hex = "0.4"
